toàn bộ code sửa

--- a/Admin/products.html
+++ b/Admin/products.html
@@ -137,6 +137,7 @@
         padding: 6px 8px;
         border-radius: 8px;
         font-weight: 700;
+        text-decoration: none;
       }
 
       /* Drawer */
