--- a/News_Section/huong_dan.html
+++ b/News_Section/huong_dan.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../assets/css/normalize.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/base.css">
-  <link rel="stylesheet" href="../News%20Section/style.css"><!-- sidebar dùng css này (tạm encode khoảng trắng) -->
+  <link rel="stylesheet" href="../News_Section/style.css"><!-- sidebar dùng css này (tạm encode khoảng trắng) -->
 
   <style>
     :root{ --text:#222; --muted:#777; --line:#e6e6e6; --black:#000; }
