--- a/giohang.html
+++ b/giohang.html
@@ -153,7 +153,7 @@
           <a href="./sanpham/sanpham.html" class="js-products-url">SẢN PHẨM</a>
         </li>
         <li><a href="./tintuc.html">TIN TỨC</a></li>
-        <li><a href="/lienhe.html">LIÊN HỆ</a></li>
+        <li><a href="./lienhe.html">LIÊN HỆ</a></li>
       </ul>
     </nav>
 
